@@ -1,0 +1,106 @@
+package net.freertr.ifc;
+
+import net.freertr.pack.packHolder;
+import net.freertr.util.debugger;
+import net.freertr.util.logger;
+
+/**
+ * trill multi-topology (rfc8377) protocol
+ *
+ * @author matecsaba
+ */
+public class ifcTrillMt extends ifcVlan {
+
+    /**
+     * ethertype of these packets
+     */
+    public final static int type = 0x9a22;
+
+    /**
+     * size of header
+     */
+    public final static int size = 4;
+
+    /**
+     * parse header
+     *
+     * @param pck packet to parse
+     * @return false on success, true on error
+     */
+    public boolean parseHeader(packHolder pck) {
+        if (pck.msbGetW(0) != type) {
+            return true;
+        }
+        int i = pck.msbGetW(2); // vlan tag
+        pck.ETHvlan = i & 0xfff; // id
+        pck.getSkip(size);
+        if (debugger.ifcTrillMtTraf) {
+            logger.debug("rx vlan=" + pck.ETHvlan);
+        }
+        return false;
+    }
+
+    /**
+     * create header
+     *
+     * @param pck packet to update
+     */
+    public void createHeader(packHolder pck) {
+        if (debugger.ifcTrillMtTraf) {
+            logger.debug("tx vlan=" + pck.ETHvlan);
+        }
+        pck.msbPutW(0, type); // ether type
+        pck.msbPutW(2, pck.ETHvlan & 0xfff); // vlan tag
+        pck.putSkip(size);
+        pck.merge2beg();
+    }
+
+    /**
+     * convert to string
+     *
+     * @return string
+     */
+    public String toString() {
+        return "trill-mt on " + lower;
+    }
+
+    /**
+     * register ethertype
+     *
+     * @param ethtyp handler
+     */
+    public void reg2ethTyp(ifcEthTyp ethtyp) {
+        cntr.dropper = ethtyp.getCounter();
+        ethtyp.addET(type, "trill-mt", this);
+        ethtyp.updateET(type, this);
+    }
+
+    /**
+     * unregister ethertype
+     *
+     * @param ethtyp handler
+     */
+    public void unreg2ethTyp(ifcEthTyp ethtyp) {
+        vLans.clear();
+        ethtyp.delET(type);
+    }
+
+    /**
+     * create new multiplexer
+     */
+    public ifcTrillMt() {
+        if (debugger.ifcTrillMtTraf) {
+            logger.debug("started");
+        }
+    }
+
+    /**
+     * get size of mtu
+     *
+     * @return mtu size
+     */
+    public int remainingMtu() {
+        return lower.getMTUsize() - size;
+    }
+
+}
