@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter-rare v23.11.23-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2023-11-23 09:52:05, took 00:12:39, with 80 workers, on 3344 cases, 0 failed, 0 traces, 12 retries
+-;-;-;2023-11-23 18:32:53, took 00:12:06, with 80 workers, on 3346 cases, 0 failed, 0 traces, 10 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -123,6 +123,8 @@ http://sources.freertr.org/cfg/conn-eth26.tst;conn-eth26.tst;success;monitor ses
 http://sources.freertr.org/cfg/conn-eth27.tst;conn-eth27.tst;success;verify source with ethernet encapsulation
 http://sources.freertr.org/cfg/conn-eth28.tst;conn-eth28.tst;success;loose verify source with ethernet encapsulation
 http://sources.freertr.org/cfg/conn-eth29.tst;conn-eth29.tst;success;secure arp/nd
+http://sources.freertr.org/cfg/conn-eth30.tst;conn-eth30.tst;success;ethernet trill-mt encapsulation
+http://sources.freertr.org/cfg/conn-eth31.tst;conn-eth31.tst;success;ethernet trill-fgl encapsulation
 http://sources.freertr.org/cfg/conn-etherip01.tst;conn-etherip01.tst;success;etherip over ipv4
 http://sources.freertr.org/cfg/conn-etherip02.tst;conn-etherip02.tst;success;etherip over ipv6
 http://sources.freertr.org/cfg/conn-etherip03.tst;conn-etherip03.tst;success;etherip over loopback
