@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter-rare v23.11.23-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2023-11-23 09:52:05, took 00:12:39, with 80 workers, on 3344 cases, 0 failed, 0 traces, 12 retries<br/>
+tested: 2023-11-23 18:32:53, took 00:12:06, with 80 workers, on 3346 cases, 0 failed, 0 traces, 10 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -140,6 +140,8 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-eth27.tst">conn-eth27.tst</a></td><td>success</td><td>verify source with ethernet encapsulation</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-eth28.tst">conn-eth28.tst</a></td><td>success</td><td>loose verify source with ethernet encapsulation</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-eth29.tst">conn-eth29.tst</a></td><td>success</td><td>secure arp/nd</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-eth30.tst">conn-eth30.tst</a></td><td>success</td><td>ethernet trill-mt encapsulation</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-eth31.tst">conn-eth31.tst</a></td><td>success</td><td>ethernet trill-fgl encapsulation</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-etherip01.tst">conn-etherip01.tst</a></td><td>success</td><td>etherip over ipv4</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-etherip02.tst">conn-etherip02.tst</a></td><td>success</td><td>etherip over ipv6</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-etherip03.tst">conn-etherip03.tst</a></td><td>success</td><td>etherip over loopback</td></tr>
